// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Pagination First page 1`] = `
<div
  class="fd-pagination"
>
  
  
  <span
    class="fd-pagination__total"
  >
    30 items
  </span>
  
  
  <nav
    class="fd-pagination__nav"
  >
    
      
    <button
      aria-disabled="true"
      aria-label="Previous"
      class="fd-pagination__link fd-pagination__link--previous"
      href="#"
      role="link"
    />
    
      
    <button
      class="fd-pagination__link is-selected"
      href="#"
      role="link"
    >
      1
    </button>
    
      
    <button
      class="fd-pagination__link"
      href="#"
      role="link"
    >
      2
    </button>
    
      
    <button
      class="fd-pagination__link"
      href="#"
      role="link"
    >
      3
    </button>
    
      
    <button
      aria-disabled="false"
      aria-label="Next"
      class="fd-pagination__link fd-pagination__link--next"
      href="#"
      role="link"
    />
    
  
  </nav>
  

</div>
`;

exports[`Storyshots Components/Pagination Last page 1`] = `
<div
  class="fd-pagination"
>
  

  <span
    class="fd-pagination__total"
  >
    500 items
  </span>
  

  <nav
    class="fd-pagination__nav"
  >
    
  
    <button
      aria-disabled="false"
      aria-label="Previous"
      class="fd-pagination__link fd-pagination__link--previous"
      href="#"
      role="link"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="link"
    >
      1
    </button>
    
  
    <span
      class="fd-pagination__more"
      role="presentation"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="link"
    >
      49
    </button>
    
  
    <button
      class="fd-pagination__link is-selected"
      href="#"
      role="link"
    >
      50
    </button>
    
  
    <button
      aria-disabled="true"
      aria-label="Next"
      class="fd-pagination__link fd-pagination__link--next"
      href="#"
      role="link"
    />
    

  </nav>
  

</div>
`;

exports[`Storyshots Components/Pagination Middle pages 1`] = `
<div
  class="fd-pagination"
>
  

  <span
    class="fd-pagination__total"
  >
    500 items
  </span>
  

  <nav
    class="fd-pagination__nav"
  >
    
  
    <button
      aria-disabled="false"
      aria-label="Previous"
      class="fd-pagination__link fd-pagination__link--previous"
      href="#"
      role="link"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="link"
    >
      1
    </button>
    
  
    <span
      class="fd-pagination__more"
      role="presentation"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="link"
    >
      21
    </button>
    
  
    <button
      class="fd-pagination__link is-selected"
      href="#"
      role="link"
    >
      22
    </button>
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="link"
    >
      23
    </button>
    
  
    <span
      class="fd-pagination__more"
      role="presentation"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="link"
    >
      50
    </button>
    
  
    <button
      aria-disabled="false"
      aria-label="Next"
      class="fd-pagination__link fd-pagination__link--next"
      href="#"
      role="link"
    />
    

  </nav>
  

</div>
`;

exports[`Storyshots Components/Pagination Mutliple pages 1`] = `
<div
  class="fd-pagination"
>
  

  <span
    class="fd-pagination__total"
  >
    500 items
  </span>
  

  <nav
    class="fd-pagination__nav"
  >
    
  
    <button
      aria-disabled="false"
      aria-label="Previous"
      class="fd-pagination__link fd-pagination__link--previous"
      href="#"
      role="link"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="link"
    >
      1
    </button>
    
  
    <button
      class="fd-pagination__link is-selected"
      href="#"
      role="link"
    >
      2
    </button>
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="link"
    >
      3
    </button>
    
  
    <span
      class="fd-pagination__more"
      role="presentation"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="link"
    >
      50
    </button>
    
  
    <button
      aria-disabled="false"
      aria-label="Next"
      class="fd-pagination__link fd-pagination__link--next"
      href="#"
      role="link"
    />
    

  </nav>
  

</div>
`;

exports[`Storyshots Components/Pagination Second page 1`] = `
<div
  class="fd-pagination"
>
  

  <span
    class="fd-pagination__total"
  >
    30 items
  </span>
  

  <nav
    class="fd-pagination__nav"
  >
    
  
    <button
      aria-disabled="false"
      aria-label="Previous"
      class="fd-pagination__link fd-pagination__link--previous"
      href="#"
      role="link"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="link"
    >
      1
    </button>
    
  
    <button
      class="fd-pagination__link is-selected"
      href="#"
      role="link"
    >
      2
    </button>
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="link"
    >
      3
    </button>
    
  
    <button
      aria-disabled="false"
      aria-label="Next"
      class="fd-pagination__link fd-pagination__link--next"
      href="#"
      role="link"
    />
    

  </nav>
  

</div>
`;
